db tests fix